--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Coroutines flows examples</string>
+    <string name="simple_flow">Simple flow</string>
+    <string name="map">Map</string>
+    <string name="zip">Zip</string>
+    <string name="combine">Combine</string>
+    <string name="take">Take</string>
+    <string name="filter">Filter</string>
+    <string name="reduce">Reduce</string>
+    <string name="flatmapconcat">FlatMapConcat﻿</string>
+    <string name="flatmapmerge">FlatMapMerge﻿</string>
+    <string name="flatmaplatest">FlatMapLatest﻿</string>
+    <string name="catch_error" >Catch</string>
+    <string name="full_networking_example">Full networking example</string>
 </resources>
